RecyclerView ListView Buttons TextView Menu Items Intents C Program Activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">hello world</string>
+    <string name="close">Close</string>
+    <string name="getmessage">Get the Message</string>
 </resources>
